lab1/Test/L1-A-8-26.cmm
struct ULFZMvHnegpfo6_ IU66TAYNlWKyFqdQ ( int dKrFR7I 
  , struct {
  float RO4sJt8JOEUFsfut , wECVfCrLO0WU = ByTpgTu0hJla4JUD 
    < eQGwwjaNR + VniwAvHW * ! ( fwmw8oM = rXj0Z || ePe9iM 
    && B != - - ! ! U_jN0W ( FgtWAvnqdSaG && qhtoCNmNGrV 
    >= BCI7mFeg8 - - ET2qjimivyQPThU [ qomIuxDgwpNY_U 
    / ! - pdWN4TxDJ1ND3Lu ( HoGk3 , dTDctN0MuLc || tP1mwh_ 
    <= geR + kb * wpLXN8DN9aq0obii60E ( == _g , DwBdf6KDqmb6PWs1 
    , XplNjimrLiCaFAy3h || PFMHcIl2drAUem > zEPDQT ) * 
    - 1116469352.529220018 * 2048171569 == ! pSYiiSUicOwSC 
    . fOpf_Z . FUNTVr02oK2zg2yKO0 ) . QFC5B7HSjs0NRAfc 
    ] / - - Ce6pR0m2sFXBeLBgh3 ( ) ) . zQkASX9ZB ) ;
}c69k5U_8h [ 1460212063 ] ) {
}
int ;
struct lXGZZIBV9Mj3J3sMnD zXLUpLohNxsQUw3 , hj 

;
int ;
int ;
int x3pvQRZyblKWg8f60r7 ( ) {
  return QYhDQ ;
  if ( LqVii8X )   if ( nCsnWA18k78iBkEMq )   while 
    ( pOcjtSKFvK6MSE )   ciu1Wrm8juwrq ;

else {
  }

}
int ;
struct hrft1K0kbwVH9i20w7Yy {
  int oILGNyw3pe9etXlgA_ ;
};
struct XS1GFz2uGSuqcqYvmvaQ ;
int ;
int V ( ) {
  oS4NS ;
  while ( tlBZj64VG5l9yAJpHs > )   while ( JOT_sF 
    )   if ( _ )   f45_CBQrs2Gu4p3GTLuQ ;
else   oryZ_OHyhywWqywEYcsu ;



}= 
int yem88JujM6K ( ) {
  if ( JPG97QgCwtnmhqPL )   kdi9qfisl5sqQz ;
else   if ( aNaqTHJE )   _cv5wN ;


}
int ;
